--- a/OdbDesignViewer/OdbDesignViewer.csproj
+++ b/OdbDesignViewer/OdbDesignViewer.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="OpenTK" Version="4.8.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\OdbDesignClientLib\OdbDesignClientLib.csproj" />
   </ItemGroup>
 
