--- a/OdbDesignViewer/Properties/launchSettings.json
+++ b/OdbDesignViewer/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "OdbDesignViewer": {
       "commandName": "Project",
-      "commandLineArgs": "\"../../../shaders\""
+      "commandLineArgs": "\"../../../shaders\"\r\n\"../../../textures\""
     }
   }
 }
