--- a/OdbDesignViewer/OdbDesignViewer.csproj
+++ b/OdbDesignViewer/OdbDesignViewer.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OdbDesignClientLib\OdbDesignClientLib.csproj" />
+    <ProjectReference Include="..\Utils\Utils.csproj" />
   </ItemGroup>
 
 </Project>
