add openGL work

--- a/OdbDesignViewer/OdbDesignViewer.csproj
+++ b/OdbDesignViewer/OdbDesignViewer.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="glfw" Version="3.3.8" />
     <PackageReference Include="OpenTK" Version="4.8.1" />
     <PackageReference Include="StbImageSharp" Version="2.27.13" />
   </ItemGroup>
